tests/paczka1/fuzzy1/80989186.err
Error in line 1: z9Mj S255 88,7
Error in line 6: YL5YBH A387 25,5
Error in line 10: YL5YBH S428 16,4
Error in line 15: YL5YBH S952 88,4
Error in line 17: YL5YBH S428 33,11
Error in line 13: S428 S255 47,0
Error in line 16: YL5YBH S255 10,0
Error in line 22: gwczQE3j0U4 S952 48,7
